--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GITHUB_URL="https://github.com/"
-REACT_APP_GITHUB_TOKEN="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"
+REACT_APP_GITHUB_URL="https://api.github.com"
+REACT_APP_GITHUB_TOKEN="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"
