9 Setup Github Context

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_GITHUB_URL="https://api.github.com"
-REACT_APP_GITHUB_TOKEN="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"
+REACT_APP_GITHUB_URL="https://github.com"
+REACT_APP_GITHUB_API="https://api.github.com"
+REACT_APP_GITHUB_TOKEN="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"
